--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "graphql-event-booking",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ferisjuan/graphql-event-booking.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ferisjuan/graphql-event-booking/issues"
-  },
-  "homepage": "https://github.com/ferisjuan/graphql-event-booking#readme"
+	"name": "graphql-event-booking",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ferisjuan/graphql-event-booking.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/ferisjuan/graphql-event-booking/issues"
+	},
+	"homepage": "https://github.com/ferisjuan/graphql-event-booking#readme",
+	"dependencies": {
+		"body-parser": "^1.18.3",
+		"express": "^4.16.4"
+	}
 }
